[package]
name = "storage_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.56"
color-eyre = "0.6.3"
log = "0.4.20"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = "0.5.2"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
nucleo-matcher = "0.3.1"
pretty_env_logger = "0.5.0"
